[gd_scene load_steps=3 format=3 uid="uid://iqvpgd0616v4"]

[ext_resource type="Script" path="res://Menu/control.gd" id="1_05v3o"]
[ext_resource type="PackedScene" uid="uid://ci52bv1m15cbs" path="res://cars/Doge.tscn" id="2_v7nk3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 352.0
offset_top = 162.0
offset_right = 923.0
offset_bottom = 519.0
script = ExtResource("1_05v3o")
player_scene = ExtResource("2_v7nk3")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 230.0
offset_right = 824.0
offset_bottom = 291.0
text = "Host"
flat = true

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 332.0
offset_right = 825.0
offset_bottom = 391.0
text = "Join"
flat = true

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 138.0
offset_right = 774.0
offset_bottom = 178.0
text = "Start"
flat = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://cars/Doge.tscn")
spawn_path = NodePath("..")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 423.0
offset_right = 800.0
offset_bottom = 483.0
text = "Exit"
flat = true

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
